# Chipmunk

./: .pre-commit-config.yaml  README.md  pyproject.toml
chipmunk/: manage.py  requirements.txt
chipmunk/accounts/: urls.py  views.py
chipmunk/analysis/: views.py
chipmunk/api/: admin.py  models.py  urls.py
chipmunk/api/fixtures/: shares.json
chipmunk/api/migrations/: 0001_initial.py  0002_asset.py  0003_cashasset_stockasset.py  0004_share.py  0005_auto_20210327_0906.py
chipmunk/chipmunk/: asgi.py  settings.py  urls.py  wsgi.py
chipmunk/home/: forms.py  urls.py  views.py
chipmunk/positions/: admin.py  models.py  urls.py  views.py
chipmunk/positions/migrations/: 0001_initial.py
chipmunk/templates/: base.html  navbar.html
chipmunk/templates/account/: login.html  signup.html
chipmunk/templates/analysis/: home.html
chipmunk/templates/forms/: login.html  position.html  register.html
chipmunk/templates/home/: home.html
chipmunk/templates/positions/: home.html
chipmunk/templates/registration/: signup.html
